<resources>

    <string name="app_name">Design</string>
    <string name="action_settings">Settings</string>
    <!--Strings universal-->
    <string name="save">Save</string>
    <!--Main Activity-->
    <string name="btn_start">Start</string>
    <!--Login activity-->
    <string name="text_header_login">Login to design</string>
    <string name="insert_email">admin</string>
    <string name="insert_password">admin</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <!--Register activity-->
    <string name="text_head_register">Register to Design Tutorial</string>
    <string name="text_name">Name</string>
    <string name="text_subname">Subname</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="title_activity_blo">BloActivity</string>
    <!--List array-->
    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uran</item>
        <item>Neptune</item>
    </string-array>
    <!--Facebbok sdk-->
    <string name="facebook_app_id">136527293192863</string>
    <string name="title_activity_notifications">NotificationsActivity</string>

    <!--NOtifications-->
    <string name="headernotice">Click on icon info for starting a notifications</string>
    <string name="title_activity_panel">PanelActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_wifi">Settings</string>

    <string name="title_activity_wifinetwork">WifinetworkActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Strings related to Settings -->

</resources>
