<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.design.design.design.RegisterActivity">

    <TextView
        android:id="@+id/head_register"
        android:layout_width="match_parent"
        android:textColor="@color/colorSuccess"
        android:text="@string/text_head_register"
        android:layout_marginEnd="50dp"
        android:drawableBottom="@color/colorShade"
        android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/reg_name"
            android:layout_below="@+id/head_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorShade"
            android:text="@string/text_name"/>

        <EditText
            android:id="@+id/reg_subname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorShade"
            android:text="@string/text_subname"
            android:layout_below="@+id/reg_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorShade"
            android:text="@string/text_email"
            android:layout_below="@+id/reg_subname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorShade"
            android:text="@string/text_password"
            android:layout_below="@+id/reg_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/init_register"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/reg_password"
        android:layout_width="match_parent"
        android:text="@string/save"
        android:onClick="initRegister"
        android:textColor="@color/colorWhite"
        android:background="@color/colorInfo"
        android:layout_height="wrap_content" />

</RelativeLayout>
